--- a/PDSProject/MainWindow.xaml
+++ b/PDSProject/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Condividi" Height="733.2" Width="560"
+        Title="Condividi" Height="772.4" Width="560"
         Closing="MainWindow_Closing">
     <Window.Background>
         <ImageBrush ImageSource="Resources/System/sfondo.png" Stretch="UniformToFill"/>
@@ -33,16 +33,40 @@
                 <Image x:Name="settingsIcon" MouseDown="Settings_visible" Source="Resources/System/settings.png" VerticalAlignment="Top" Height="36" Margin="0,10,9.8,0" HorizontalAlignment="Right" Width="36"/>
 
                 <!--Progress File-->
-                <TextBlock x:Name="textFile" TextWrapping="Wrap" RenderTransformOrigin="0.488,0.535" Margin="22,181,228.8,0" Height="29" VerticalAlignment="Top" Foreground="White" FontFamily="Lato" FontSize="14"/>
-                <TextBlock x:Name="textNumberFile" TextWrapping="Wrap" Text="(1/1)" RenderTransformOrigin="0.566,0.535" Height="29" Margin="0,181,161.8,0" Foreground="White" FontFamily="Lato" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Right" Width="62"/>
-                <TextBlock x:Name="textTime" TextWrapping="Wrap" RenderTransformOrigin="0.51,0.568" Height="29" VerticalAlignment="Top" Margin="0,181,50.8,0" Foreground="White" FontFamily="Lato" FontSize="14" HorizontalAlignment="Right" Width="97"/>
-                <ProgressBar x:Name="progressFile" Height="18" Margin="22,215,250.4,0" VerticalAlignment="Top"/>
-                <Button x:Name="stopButton" Content="X" Height="18" Margin="0,215,199.4,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="24" FontFamily="Lato"/>
+                <TextBlock x:Name="textListFile" FontWeight="Bold" TextWrapping="Wrap" Text="File" RenderTransformOrigin="0.479,0.472" Margin="26,0,398.8,406.8" Foreground="White" FontFamily="Lato" FontSize="16" Height="41" VerticalAlignment="Bottom"/>
+
+                <ListBox Name="fileList" SelectionChanged="FileList_SelectionChanged" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,271,24.8,275.8" Background="Transparent">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Margin="0,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock x:Name="textUserFile" Text="{Binding hostName}" Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
+                                <TextBlock x:Name="textFile" Text="{Binding fileName}" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
+                                <TextBlock x:Name="textStatusFile" Text="{Binding statusFile}" Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
+
+                                <TextBlock x:Name="textTime" Text="{Binding estimatedTime}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
+                                <ProgressBar x:Name="progressFile" Value="{Binding dataRecived}" Grid.Column="1" Grid.Row="1" Height="18"/>
+                                <Button x:Name="stopButton" Grid.Column="2" Grid.Row="1" Content="X" Height="18" Width="24" FontFamily="Lato"/>
+
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+
+                <!---->
 
                 <!--Friends-->
-                <TextBlock x:Name="textFriend" FontWeight="Bold" TextWrapping="Wrap" Text="Amici" RenderTransformOrigin="0.479,0.472" Margin="22,314,402.8,301.4" Foreground="White" FontFamily="Lato" FontSize="16"/>
+                <TextBlock x:Name="textFriend" FontWeight="Bold" TextWrapping="Wrap" Text="Amici" RenderTransformOrigin="0.479,0.472" Margin="26,430,398.8,233.8" Foreground="White" FontFamily="Lato" FontSize="16"/>
 
-                <ListBox Name="friendList" SelectionChanged="friendList_OnSelectionChanged" MouseDoubleClick="FriendList_DoubleClick" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,341,24.8,42.8" Background="Transparent">
+                <ListBox Name="friendList" SelectionChanged="friendList_OnSelectionChanged" MouseDoubleClick="FriendList_DoubleClick" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,458,24.8,42.8" Background="Transparent">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Grid Margin="0,0">
@@ -63,7 +87,7 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
 
-                <TextBox x:Name="textInfoMessage" TextWrapping="Wrap" Margin="22,253,24.8,0" Height="48" VerticalAlignment="Top" FontFamily="Lato" VerticalContentAlignment="Center" />
+                <TextBox x:Name="textInfoMessage" TextWrapping="Wrap" Margin="22,185,24.8,0" Height="48" VerticalAlignment="Top" FontFamily="Lato" VerticalContentAlignment="Center" />
 
                 <Button x:Name="SendButton" Visibility ="Hidden" Click="ButtonSend_Click" Content="Invia" Height="22" Width="64" Margin="0,0,10.4,9.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
                 <Button x:Name="UndoButton" Visibility ="Hidden"  Click="ButtonUndo_Click" Content="Annulla" Height="22" Width="64"  Margin="0,0,91.8,9.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
