--- a/PDSProject/MainWindow.xaml
+++ b/PDSProject/MainWindow.xaml
@@ -45,16 +45,16 @@
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="*" />
-                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="30" />
+                                    <RowDefinition Height="30" />
                                 </Grid.RowDefinitions>
                                 <TextBlock x:Name="textUserFile" Text="{Binding hostName}" Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
                                 <TextBlock x:Name="textFile" Text="{Binding fileName}" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
                                 <TextBlock x:Name="textStatusFile" Text="{Binding statusFile}" Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
 
                                 <TextBlock x:Name="textTime" Text="{Binding estimatedTime}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
-                                <ProgressBar x:Name="progressFile" Value="{Binding dataRecived}" Grid.Column="1" Grid.Row="1" Height="18"/>
-                                <Button x:Name="stopButton" Grid.Column="2" Grid.Row="1" Content="X" Height="18" Width="24" FontFamily="Lato"/>
+                                <ProgressBar x:Name="progressFile" Value="{Binding dataRecived}" Grid.Column="1" Grid.Row="1" Height="18" />
+                                <Button x:Name="stopButton" Grid.Column="2" Grid.Row="1" Content="X" Height="18" Width="24" FontFamily="Lato"  VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
                             </Grid>
                         </DataTemplate>
