--- a/PDSProject/MainWindow.xaml
+++ b/PDSProject/MainWindow.xaml
@@ -35,7 +35,7 @@
                 <!--Progress File-->
                 <TextBlock x:Name="textListFile" FontWeight="Bold" TextWrapping="Wrap" Text="File" RenderTransformOrigin="0.479,0.472" Margin="26,0,398.8,406.8" Foreground="White" FontFamily="Lato" FontSize="16" Height="41" VerticalAlignment="Bottom"/>
 
-                <ListBox Name="fileList" SelectionChanged="FileList_SelectionChanged" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,271,24.8,275.8" Background="Transparent">
+                <ListBox Name="fileList" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,271,24.8,275.8" Background="Transparent">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Grid Margin="0,0">
@@ -54,10 +54,10 @@
 
                                 <TextBlock x:Name="textTime" Text="{Binding estimatedTime}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
                                 <ProgressBar x:Name="progressFile" Value="{Binding dataRecived}" Grid.Column="1" Grid.Row="1" Height="18" />
-                                <Button x:Name="stopButton" Grid.Column="2" Grid.Row="1" Content="X" Height="18" Width="24" FontFamily="Lato" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                <Button x:Name="stopButton" Click="NoButton_Click" Grid.Column="2" Grid.Row="1" Content="X" Height="18" Width="24" FontFamily="Lato" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
-                                <Button x:Name="noButton" Visibility="Hidden" Grid.Column="2" Grid.Row="1" Content="SI" Height="18" Width="24" FontFamily="Lato" VerticalAlignment="Center" Margin="0,0,30,0"/>
-                                <Button x:Name="yesButton" Visibility="Hidden" Grid.Column="2" Grid.Row="1" Content="NO" Height="18" Width="24" FontFamily="Lato" VerticalAlignment="Center" Margin="30,0,0,0"/>
+                                <Button x:Name="yesButton" Click="YesButton_Click" Visibility="Hidden" Grid.Column="2" Grid.Row="1" Content="SI" Height="18" Width="24" FontFamily="Lato" VerticalAlignment="Center" Margin="0,0,30,0"/>
+                                <Button x:Name="noButton" Click="NoButton_Click" Visibility="Hidden" Grid.Column="2" Grid.Row="1" Content="NO" Height="18" Width="24" FontFamily="Lato" VerticalAlignment="Center" Margin="30,0,0,0"/>
 
                             </Grid>
                         </DataTemplate>
