Modifiche Interfaccia - aggiunta icona lampeggiante - sistemate proporzioni listBox

--- a/PDSProject/MainWindow.xaml
+++ b/PDSProject/MainWindow.xaml
@@ -33,9 +33,9 @@
                 <Image x:Name="settingsIcon" MouseDown="Settings_visible" Source="Resources/System/settings.png" VerticalAlignment="Top" Height="36" Margin="0,10,9.8,0" HorizontalAlignment="Right" Width="36"/>
 
                 <!--Progress File-->
-                <TextBlock x:Name="textListFile" FontWeight="Bold" TextWrapping="Wrap" Text="File" RenderTransformOrigin="0.479,0.472" Margin="26,0,398.8,406.8" Foreground="White" FontFamily="Lato" FontSize="16" Height="41" VerticalAlignment="Bottom"/>
+                <TextBlock x:Name="textListFile" FontWeight="Bold" TextWrapping="Wrap" Text="File" RenderTransformOrigin="0.479,0.472" Margin="26,253,398.8,0" Foreground="White" FontFamily="Lato" FontSize="16" Height="41" VerticalAlignment="Top"/>
 
-                <ListBox Name="fileList" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,271,24.8,275.8" Background="Transparent">
+                <ListBox Name="fileList" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,279,24.8,0" Background="Transparent" Height="153" VerticalAlignment="Top">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Grid Margin="0,0">
@@ -67,9 +67,9 @@
                 <!---->
 
                 <!--Friends-->
-                <TextBlock x:Name="textFriend" FontWeight="Bold" TextWrapping="Wrap" Text="Amici" RenderTransformOrigin="0.479,0.472" Margin="26,430,398.8,233.8" Foreground="White" FontFamily="Lato" FontSize="16"/>
+                <TextBlock x:Name="textFriend" FontWeight="Bold" TextWrapping="Wrap" Text="Amici" RenderTransformOrigin="0.479,0.472" Margin="26,454,398.8,0" Foreground="White" FontFamily="Lato" FontSize="16" Height="30" VerticalAlignment="Top"/>
 
-                <ListBox Name="friendList" SelectionChanged="friendList_OnSelectionChanged" MouseDoubleClick="FriendList_DoubleClick" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,458,24.8,42.8" Background="Transparent">
+                <ListBox Name="friendList" SelectionChanged="friendList_OnSelectionChanged" MouseDoubleClick="FriendList_DoubleClick" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,484,24.8,42.8" Background="Transparent">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Grid Margin="0,0">
@@ -90,7 +90,7 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
 
-                <TextBox x:Name="textInfoMessage" TextWrapping="Wrap" Margin="22,185,24.8,0" Height="48" VerticalAlignment="Top" FontFamily="Lato" VerticalContentAlignment="Center" />
+                <TextBox x:Name="textInfoMessage" TextWrapping="Wrap" Margin="22,185,24.8,0" Height="50" VerticalAlignment="Top" FontFamily="Lato" VerticalContentAlignment="Center" />
 
                 <Button x:Name="SendButton" Visibility ="Hidden" Click="ButtonSend_Click" Content="Invia" Height="22" Width="64" Margin="0,0,10.4,9.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
                 <Button x:Name="UndoButton" Visibility ="Hidden"  Click="ButtonUndo_Click" Content="Annulla" Height="22" Width="64"  Margin="0,0,91.8,9.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
@@ -102,10 +102,7 @@
             <Grid Margin="0,0,-2.4,-6.6">
                 <!--User Settings-->
                 <Ellipse x:Name="ImageSettingsProfile" Stroke="White" RenderTransformOrigin="-0.038,-1.145" Height="138" Width="135" Margin="22,23,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <!--<Ellipse.Fill>
-                                <ImageBrush />/ImageSource="Resources/Host/HostProfileImage/fox.jpg" />
-                     </Ellipse.Fill>-->
-                </Ellipse>
+                  </Ellipse>
                 <TextBlock FontWeight="Bold" TextWrapping="Wrap" Text="Nome Profilo" RenderTransformOrigin="0.458,0.489" Margin="199,59,0.4,0" Height="22" VerticalAlignment="Top" FontFamily="Lato" FontSize="16" Foreground="White"/>
                 <TextBox x:Name="textChangeName" Height="26" TextWrapping="Wrap" Width="243" Margin="199,86,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Lato" VerticalContentAlignment="Center"/>
                 <Image x:Name="editIcon" Source="Resources/System/edit_white.png" RenderTransformOrigin="3.019,6.691" MouseDown="Image_MouseDown" Height="22" Width="25" Margin="147,139,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
