--- a/PDSProject/MainWindow.xaml
+++ b/PDSProject/MainWindow.xaml
@@ -5,27 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Condividi" Height="772.4" Width="560"
+        Title="Condividi" Height="772.4" Width="580"
         Closing="MainWindow_Closing">
     <Window.Background>
         <ImageBrush ImageSource="Resources/System/sfondo.png" Stretch="UniformToFill"/>
     </Window.Background>
-    <!--<StackPanel Background="#BDD6E6" Margin="0,0,0.4,-3.2" Orientation="Vertical">-->
-
+    
     <Grid Margin="10,10,10,10" IsSharedSizeScope="True">
 
         <!--Main Window-->
         <!--Local User-->
         <GroupBox x:Name="MainCanvas" Header="Condividi" BorderBrush="Black" Foreground="Black">
             <Grid>
-                <Ellipse x:Name="ImageProfile" RenderTransformOrigin="-0.038,-1.145" Height="138" Width="135" Margin="22,23,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Stroke="White">
-                    <!--<Ellipse.Fill>
-                   <ImageBrush />/ImageSource="Resources/Host/HostProfileImage/fox.jpg" />
-                </Ellipse.Fill>-->
-                </Ellipse>
-                <TextBlock x:Name="textUserName" FontWeight="Bold" TextWrapping="Wrap" RenderTransformOrigin="0.458,0.489" Margin="199,59,0.4,0" Height="22" VerticalAlignment="Top" Foreground="White" FontFamily="Lato" FontSize="16"/>
+                <Ellipse x:Name="ImageProfile" Height="138" Width="135" Margin="22,23,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Stroke="White"/>
+                <TextBlock x:Name="textUserName" FontWeight="Bold" TextWrapping="Wrap" Margin="199,59,0.4,0" Height="22" VerticalAlignment="Top" Foreground="White" FontFamily="Lato" FontSize="16"/>
                 <Image x:Name="localStatusImage" Margin="172,59,0,0" HorizontalAlignment="Left" Width="22" Height="19" VerticalAlignment="Top"/>
-                <ComboBox x:Name="comboStatus" SelectionChanged="ComboStatus_OnSelectionChanged" RenderTransformOrigin="-0.357,-5.009" Height="26" Margin="199,86,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" FontFamily="Lato" VerticalContentAlignment="Center">
+                <ComboBox x:Name="comboStatus" SelectionChanged="ComboStatus_OnSelectionChanged" Height="26" Margin="199,86,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" FontFamily="Lato" VerticalContentAlignment="Center">
                     <ComboBoxItem>Online</ComboBoxItem>
                     <ComboBoxItem>Offline</ComboBoxItem>
                 </ComboBox>
@@ -33,12 +28,12 @@
                 <Image x:Name="settingsIcon" MouseDown="Settings_visible" Source="Resources/System/settings.png" VerticalAlignment="Top" Height="36" Margin="0,10,9.8,0" HorizontalAlignment="Right" Width="36"/>
 
                 <!--Progress File-->
-                <TextBlock x:Name="textListFile" FontWeight="Bold" TextWrapping="Wrap" Text="File" RenderTransformOrigin="0.479,0.472" Margin="26,253,398.8,0" Foreground="White" FontFamily="Lato" FontSize="16" Height="41" VerticalAlignment="Top"/>
+                <TextBlock x:Name="textListFile" FontWeight="Bold" TextWrapping="Wrap" Text="File" Margin="26,253,398.8,0" Foreground="White" FontFamily="Lato" FontSize="16" Height="41" VerticalAlignment="Top"/>
 
                 <ListBox Name="fileList" ItemsSource="{Binding}" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,279,24.8,0" Background="Transparent" Height="153" VerticalAlignment="Top">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <Grid Margin="0,0">
+                            <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="*" />
@@ -54,10 +49,10 @@
 
                                 <TextBlock x:Name="textTime" Text="{Binding estimatedTime}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontFamily="Lato" FontSize="14"/>
                                 <ProgressBar x:Name="progressFile" Value="{Binding dataRecived}" Grid.Column="1" Grid.Row="1" Height="18" />
-                                <Button x:Name="stopButton" Tag="{Binding Path=.}" Click="NoButton_Click" Grid.Column="2" Grid.Row="1" Content="X" Height="18" Width="24" FontFamily="Lato" VerticalAlignment="Center" Margin="60,0,0,0"/>
+                                <Button x:Name="stopButton" Tag="{Binding Path=.}" Click="NoButton_Click" Grid.Column="2" Grid.Row="1" Content="X" Height="20" Width="26" FontFamily="Lato" VerticalAlignment="Center" Margin="60,0,0,0"/>
 
-                                <Button x:Name="yesButton" Tag="{Binding Path=.}" Click="YesButton_Click" Grid.Column="2" Grid.Row="1" Content="SI" Height="18" Width="24" FontFamily="Lato" VerticalAlignment="Center" Margin="0,0,60,0"/>
-                                <Button x:Name="noButton" Tag="{Binding Path=.}" Click="NoButton_Click" Grid.Column="2" Grid.Row="1" Content="NO" Height="18" Width="24" FontFamily="Lato" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                <Button x:Name="yesButton" Tag="{Binding Path=.}" Click="YesButton_Click" Grid.Column="2" Grid.Row="1" Content="SI" Height="20" Width="26" FontFamily="Lato" VerticalAlignment="Center" Margin="0,0,60,0"/>
+                                <Button x:Name="noButton" Tag="{Binding Path=.}" Click="NoButton_Click" Grid.Column="2" Grid.Row="1" Content="NO" Height="20" Width="26" FontFamily="Lato" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
                             </Grid>
                         </DataTemplate>
@@ -67,12 +62,12 @@
                 <!---->
 
                 <!--Friends-->
-                <TextBlock x:Name="textFriend" FontWeight="Bold" TextWrapping="Wrap" Text="Amici" RenderTransformOrigin="0.479,0.472" Margin="26,454,398.8,0" Foreground="White" FontFamily="Lato" FontSize="16" Height="30" VerticalAlignment="Top"/>
+                <TextBlock x:Name="textFriend" FontWeight="Bold" TextWrapping="Wrap" Text="Amici" Margin="26,454,398.8,0" Foreground="White" FontFamily="Lato" FontSize="16" Height="30" VerticalAlignment="Top"/>
 
                 <ListBox Name="friendList" SelectionChanged="friendList_OnSelectionChanged" MouseDoubleClick="FriendList_DoubleClick" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="26,484,24.8,42.8" Background="Transparent">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <Grid Margin="0,0">
+                            <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="100" />
                                     <ColumnDefinition Width="150" />
@@ -92,31 +87,30 @@
 
                 <TextBox x:Name="textInfoMessage" TextWrapping="Wrap" Margin="22,185,24.8,0" Height="50" VerticalAlignment="Top" FontFamily="Lato" VerticalContentAlignment="Center" />
 
-                <Button x:Name="SendButton" Visibility ="Hidden" Click="ButtonSend_Click" Content="Invia" Height="22" Width="64" Margin="0,0,10.4,9.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
-                <Button x:Name="UndoButton" Visibility ="Hidden"  Click="ButtonUndo_Click" Content="Annulla" Height="22" Width="64"  Margin="0,0,91.8,9.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
+                <Button x:Name="SendButton" Visibility ="Hidden" Click="ButtonSend_Click" Content="Invia" Height="24" Width="64" Margin="0,0,10.4,9.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
+                <Button x:Name="UndoButton" Visibility ="Hidden"  Click="ButtonUndo_Click" Content="Annulla" Height="24" Width="64"  Margin="0,0,91.8,9.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
             </Grid>
         </GroupBox>
 
         <!--Settings-->
         <GroupBox x:Name="SettingsCanvas" Visibility="Hidden" Header="Impostazioni" BorderBrush="Black" Foreground="Black">
-            <Grid Margin="0,0,-2.4,-6.6">
+            <Grid>
                 <!--User Settings-->
-                <Ellipse x:Name="ImageSettingsProfile" Stroke="White" RenderTransformOrigin="-0.038,-1.145" Height="138" Width="135" Margin="22,23,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                  </Ellipse>
-                <TextBlock FontWeight="Bold" TextWrapping="Wrap" Text="Nome Profilo" RenderTransformOrigin="0.458,0.489" Margin="199,59,0.4,0" Height="22" VerticalAlignment="Top" FontFamily="Lato" FontSize="16" Foreground="White"/>
+                <Ellipse x:Name="ImageSettingsProfile" Stroke="White" Height="138" Width="135" Margin="22,23,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <TextBlock FontWeight="Bold" TextWrapping="Wrap" Text="Nome Profilo" Margin="199,59,0.4,0" Height="22" VerticalAlignment="Top" FontFamily="Lato" FontSize="16" Foreground="White"/>
                 <TextBox x:Name="textChangeName" Height="26" TextWrapping="Wrap" Width="243" Margin="199,86,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Lato" VerticalContentAlignment="Center"/>
-                <Image x:Name="editIcon" Source="Resources/System/edit_white.png" RenderTransformOrigin="3.019,6.691" MouseDown="Image_MouseDown" Height="22" Width="25" Margin="147,139,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Image x:Name="editIcon" Source="Resources/System/edit_white.png" MouseDown="Image_MouseDown" Height="22" Width="25" Margin="147,139,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
                 <!--System Settings-->
                 <CheckBox x:Name="AcceptFile" Content="Accetta tutti i file" Height="29" Width="274" Margin="22,234,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Lato" FontSize="14" Foreground="White" VerticalContentAlignment="Center"/>
                 <CheckBox x:Name="ChoosePath" Checked="CheckBox_Check" Unchecked="CheckBox_Uncheck" Content="Usa percorso predefinito" Height="28" Width="274" Margin="22,277,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Lato" FontSize="14" Foreground="White" VerticalContentAlignment="Center" UseLayoutRounding="False" Padding="4,-1,0,0"/>
                 <TextBlock FontWeight="Bold" TextWrapping="Wrap" Text="Path" RenderTransformOrigin="0.458,0.489" Width="99" Height="19" Margin="22,319,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Lato" FontSize="14" Foreground="White"/>
-                <TextBox x:Name="pathName" Height="28" IsReadOnly="True" Background="#FFB9B8B8" TextWrapping="Wrap" Margin="22,343,65.2,0" VerticalAlignment="Top" FontFamily="Lato" VerticalContentAlignment="Center" FontSize="14" BorderBrush="#FF969AA6"/>
-                <Button x:Name="folderButton" Click="FolderButton_OnClick" Content="Cambia" Width="64" Margin="0,386,66.2,0" HorizontalAlignment="Right" Height="22" VerticalAlignment="Top" FontFamily="Lato"/>
+                <TextBox x:Name="pathName" Height="28" IsReadOnly="True" Background="#FFB9B8B8" TextWrapping="Wrap" Margin="22,343,65.2,0" VerticalAlignment="Top" FontFamily="Lato" VerticalContentAlignment="Center" FontSize="14"/>
+                <Button x:Name="folderButton" Click="FolderButton_OnClick" Content="Cambia" Width="64" Margin="0,386,66.2,0" HorizontalAlignment="Right" Height="24" VerticalAlignment="Top" FontFamily="Lato"/>
 
 
-                <Button x:Name="ApplyButton" Click="ApplyButton_OnClick" Content="Applica" Height="22" Width="64" Margin="0,0,13.2,18" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
-                <Button x:Name="BackButton" Click="BackButton_OnClick" Content="Indietro" Height="22" Width="64" Margin="0,0,93.2,18" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
+                <Button x:Name="ApplyButton" Click="ApplyButton_OnClick" Content="Applica" Height="24" Width="64" Margin="0,0,13.2,18" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
+                <Button x:Name="BackButton" Click="BackButton_OnClick" Content="Indietro" Height="24" Width="64" Margin="0,0,93.2,18" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Lato"/>
 
             </Grid>
         </GroupBox>
